# ETHGlobalUnite

./: .env.example  .gitignore  ATOMIC_SWAP_README.md  README.md  foundry.toml  package.json  pnpm-lock.yaml
contracts/aptos/: Move.toml
contracts/aptos/sources/: escrow.move
contracts/ethereum/src/: CrossChainResolver.sol
contracts/near/: Cargo.toml
contracts/near/src/: lib.rs
demo/: .env.example  next.config.js  package.json  tailwind.config.js
demo/src/app/: globals.css  layout.tsx  page.tsx
demo/src/components/: ChainSelector.tsx  Footer.tsx  Header.tsx  StatsPanel.tsx  SwapHistory.tsx  SwapInterface.tsx  SwapPreview.tsx  TokenInput.tsx
demo/src/contexts/: SwapContext.tsx
docs/: SETUP.md
examples/: atomic-swap-example.js
src/: SwapManager.js
src/app/: page.tsx
src/app/api/swap/: route.ts
src/components/: SwapCard.tsx
src/config/: config.js
src/orchestrator/: ETHAptosOrchestrator.js  ETHNEAROrchestrator.js
src/utils/: HTLCUtils.js
